$Header$
===============================================================

207	Luke Howard <lukeh@padl.com>

	* work without LDAP_OPT_X_TLS_RANDOM_FILE
	* fix schema mapping regression from nss_ldap-205;
	  attribute mapping now works again

205	Luke Howard <lukeh@padl.com>

	* build with Sleepycat DB without db185 compat layer
	  (tested with 4.x; needs testing on 3.x)

204	Luke Howard <lukeh@padl.com>

	* Linux netgroup implementation from Larry Lile
	* Multiple service search descriptor support from
	  Symas
	* IPv6 patch from Thorsten Kukuk at SuSE

203	Luke Howard <lukeh@padl.com>

	* fix for BUG#115
	* fix for BUG#121

202	Luke Howard <lukeh@padl.com>

	* getsockname() fixes from Howard Chu
	* configuration parser crasher fix

201	Luke Howard <lukeh@padl.com>

	* Berkeley DB fixes from Howard Chu
	* Netscape client library build fix

200	Luke Howard <lukeh@padl.com>

	* use sigprocmask() if available to block SIGPIPE
	* fix build breakage with OpenLDAP HEAD

199	Luke Howard <lukeh@padl.com>

	* HP-UX port
	* BUG#111: incorrect debugging statement in
	  _nss_ldap_enter()
	* export required symbols only on Linux
	* corrected symbol names for glibc alias enumeration
	  functions
	* the DNS response parser doesn't stop after parsing the
	  right number of records, and doesn't handle long responses
	  (Nalin at RedHat)

198	 Luke Howard <lukeh@padl.com>

	* BUG#108: fix potential buffer overflow in dnsconfig.c
	  (could be triggered if no flat file configuration
	  for nss_ldap and large DNS SRV data for domain;
	  because nss_ldap in SRV mode trusts DNS we do
	  not believe this to be exploitable to elevate
	  privilege in the default configuration)
	* do not malloc() configuration structure; use 
	  buffer

197	Luke Howard <lukeh@padl.com>

	* improved AIX documentation from Dejan Muhamedagic
	* define LDAP_OPT_SSL for Solaris 9

196	Luke Howard <lukeh@padl.com>

	* return NSS_TRYAGAIN not NSS_NOTFOUND for insufficient
	  buffer space in dn2uid_cache_get()